커스텀 뷰를 이용한 gradient layer frame 업데이트

--- a/CAGradientLayerExample/Base.lproj/Main.storyboard
+++ b/CAGradientLayerExample/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOC-oF-xBy">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BOC-oF-xBy" customClass="GradientBGView" customModule="CAGradientLayerExample" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="326" width="393" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
